Add default implement for calculators